# MLcompiler-tutorial

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTE.md  README.md
iree/: runtime.md
mlir/: README.md
mlir/example/: .envsetup.sh  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  build_with_conda.sh  update.sh
mlir/example/.devcontainer/: Dockerfile  devcontainer.json
mlir/example/Ch1/: toyc.cpp
mlir/example/Ch1/include/toy/: AST.h  Lexer.h
mlir/example/Ch1/parser/: AST.cpp
mlir/example/Ch2/: CMakeLists.txt  codegen.toy  toyc.cpp
mlir/example/Ch2/include/toy/: AST.h
mlir/example/Ch2/mlir/: Dialect.cpp
mlir/example/Ch3/: CMakeLists.txt  opt.toy  toyc.cpp
mlir/example/Ch3/include/toy/: Dialect.h  MLIRGen.h
mlir/example/Ch3/mlir/: Dialect.cpp  MLIRGen.cpp
mlir/example/Ch4/: CMakeLists.txt  toyc.cpp
mlir/example/Ch4/include/toy/: Lexer.h  Passes.h  ShapeInferenceInterface.h
mlir/example/Ch4/mlir/: Dialect.cpp
mlir/example/Ch5/: CMakeLists.txt  toyc.cpp
mlir/example/Ch5/include/toy/: Passes.h
mlir/example/Ch5/mlir/: LowerToAffineLoops.cpp
mlir/example/Ch6/: CMakeLists.txt  toyc.cpp
mlir/example/Ch6/include/toy/: Passes.h
mlir/example/Ch6/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp
mlir/example/Ch7/: CMakeLists.txt  toyc.cpp
mlir/example/Ch7/include/toy/: AST.h  Dialect.h  Lexer.h  Parser.h
mlir/example/Ch7/mlir/: Dialect.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ToyCombine.cpp
mlir/example/Ch7/parser/: AST.cpp
mlir/example/Ch8/: CMakeLists.txt  matmul.toy  matmul.toy.mlir  toyc.cpp
mlir/example/Ch8/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  Ops.td  Parser.h
mlir/example/Ch8/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  ToyCombine.cpp
mlir/example/Toy/Ch3/: scalar.toy  trivial_reshape.toy
mlir/example/Toy/Ch4/: ast.toy  transpose_transpose.toy  trivial_reshape.toy
mlir/example/Toy/Ch6/: ast.toy  scalar.toy  transpose_transpose.toy
mlir/example/Toy/Ch7/: ast.toy  transpose_transpose.toy
mlir/example/ch1/: CMakeLists.txt
mlir/example/ch1/include/toy/: Parser.h
mlir/example/scripts/: apply_patch.sh  build_deps.sh  make_patch.sh  sync_deps.sh  update.sh
mlir/example/scripts/patch/: matmul.patch
mlir/example/tests/Toy/Ch2/: ast.toy
mlir/example/tests/Toy/Ch3/: ast.toy
mlir/example/tests/Toy/Ch4/: scalar.toy
mlir/example/tests/Toy/Ch5/: ast.toy  scalar.toy  transpose_transpose.toy
mlir/example/tests/Toy/Ch7/: scalar.toy  struct-ast.toy
mlir/example/tests/transform/Ch1/: invalidation-2.mlir  sequence.mlir
mlir/example/tests/transform/Ch3/: sequence.mlir
mlir/example/tests/transform/Ch4/: sequence.mlir
mlir/example/transform_Ch1/: sequence.mlir  sequence.result.mlir
mlir/example/transform_Ch2/: CMakeLists.txt  ops.mlir
mlir/example/transform_Ch2/include/: CMakeLists.txt  MyExtension.td
mlir/example/transform_Ch2/lib/: CMakeLists.txt
mlir/example/transform_Ch3/: CMakeLists.txt
mlir/example/transform_Ch3/include/: CMakeLists.txt  MyExtension.td  MyExtensionTypes.td
mlir/example/transform_Ch3/lib/: CMakeLists.txt
mlir/example/transform_Ch4/: CMakeLists.txt  defining_match.mlir  match_chains.mlir  matchers_inferred.mlir  matchers_inferred_mul.mlir  simple_match.mlir
mlir/example/transform_Ch4/lib/: CMakeLists.txt
mlir/example/transform_ChH/: explore.mlir  full.mlir
mlir/example/vscode/: c_cpp_properties.json  cmake-kits.json  launch.json  settings.json
mlir/mhlo-pass-example/: .cmake-lint.yaml  .envsetup.sh  .gitignore  .pre-commit-config.yaml  .prettierrc  CMakeLists.txt  Env.md  README.md  TODO.md  build.sh  build_with_apt.sh  build_with_conda.sh
mlir/mhlo-pass-example/.devcontainer/: devcontainer.json
mlir/mhlo-pass-example/ExpLog/: CMakeLists.txt  main.cpp  mhlo.explog.mlir
mlir/mhlo-pass-example/ExpLog/include/passes/: ExpLog.h
mlir/mhlo-pass-example/ExpLog/mlir/: ExpLog.cpp  ExpLog.td
mlir/mhlo-pass-example/Inline/: CMakeLists.txt  main.cpp  mhlo.inline.mlir
mlir/mhlo-pass-example/Inline/include/passes/: Inline.h
mlir/mhlo-pass-example/Inline/mlir/: Inline.cpp  Inline.pdll  Inline.td
mlir/mhlo-pass-example/LoopFusion/: mhlo.loop.mlir
mlir/mhlo-pass-example/Outline/: CMakeLists.txt  main.cpp  mhlo.outline.mlir
mlir/mhlo-pass-example/Outline/include/passes/: Outline.h
mlir/mhlo-pass-example/Outline/mlir/: Outline.cpp  Outline.pdll  Outline.td
mlir/mhlo-pass-example/PassTutor/: CMakeLists.txt  mhlo.pow2.mlir
mlir/mhlo-pass-example/PassTutor/include/passes/: Pow2.h
mlir/mhlo-pass-example/PassTutor/mlir/: PassTutor.cpp  Pow2.td
mlir/mhlo-pass-example/PassTutor/mlir/transform/: pass.td
mlir/mhlo-pass-example/Pow2/: CMakeLists.txt  main.cpp  mhlo.pow2.mlir
mlir/mhlo-pass-example/Pow2/include/passes/: Pow2.h
mlir/mhlo-pass-example/Pow2/mlir/: Pow2.cpp  Pow2.pdll  Pow2.td
mlir/mhlo-pass-example/Pow2/mlir/transform/: pass.td
mlir/mhlo-pass-example/Tanh/: CMakeLists.txt  main.cpp  mhlo.tanh.mlir
mlir/mhlo-pass-example/Tanh/include/passes/: Tanh.h
mlir/mhlo-pass-example/Tanh/mlir/: Tanh.cpp  Tanh.td
mlir/mhlo-pass-example/build_tools/: build_deps.sh  build_mhlo.sh  build_mhlo_with_apt.sh  build_mhlo_with_conda.sh  build_mlir.sh  llvm_version.txt  mhlo_version.txt  sync_deps.sh
mlir/mhlo-pass-example/mhlo_example/: CMakeLists.txt  mhlo.add.mlir  mhlo_example.cpp
mlir/mhlo-pass-example/pass-tutor-opt/: CMakeLists.txt  pass-tutor-opt.cpp
mlir/mhlo-pass-example/tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  mhlo.explog.mlir  mhlo.inline.mlir  mhlo.outline.mlir  mhlo.outline.multiple.mlir  mhlo.pow2.mlir  mhlo.tanh.mlir  pass-tutor.mlir
mlir/mhlo-pass-example/vscode/: c_cpp_properties.json  settings.json
torch/: README.md
torch/vscode/: build.sh
torch/vscode/pytorch/vscode/: .envsetup.sh  c_cpp_properties.json  cmake-kits.json  launch.json  settings.json
tvm/: runtime.md  tvm.md
xla/: README.md
xla/drawio/: xla_compile.drawio  xla_run.drawio
xla/jax-core/: jax_core.py  jax_core_scrach.py
(+6 files in other folders)
